[fix] mailers on ios gmail app

--- a/app/assets/stylesheets/email.sass
+++ b/app/assets/stylesheets/email.sass
@@ -12,7 +12,7 @@ body
     border-collapse: collapse
 
   .upper-small-text
-    font-size: 10px
+    font-size: 10px !important
     color: #b2b2b2
     padding-top: 10px
     padding-bottom: 30px
@@ -38,7 +38,7 @@ body
     .title
       color: white
       font-weight: bold
-      font-size: 28px
+      font-size: 28px !important
       margin-left: 20px
       vertical-align: middle
       padding: 0px
@@ -60,7 +60,7 @@ body
     .you-invited
       color: white
       font-weight: bold
-      font-size: 32px
+      font-size: 32px !important
       width: 320px
       text-align: center
       margin-bottom: 30px
@@ -95,16 +95,17 @@ body
       h2.notification
         text-align: center
         font-family: arial
-        font-size: 32px
+        font-size: 32px !important
         color: #333
 
     .message
       color: black
-      font-size: 18px
+      font-size: 18px !important
       width: 300px
       text-align: center
       margin-top: 30px
       margin-bottom: 30px
+      line-height: 23px !important
 
     .trial-expire-message
       width: 70%!important
@@ -115,7 +116,8 @@ body
 
     .ready-to-get-started
       color: black
-      font-size: 20px
+      font-size: 20px !important
+      line-height: 26px !important
       width: 300px
       text-align: center
       margin: 50px auto 30px
@@ -124,7 +126,7 @@ body
       height: 34px
       color: #378aca
       font-weight: bold
-      font-size: 20px
+      font-size: 20px !important
       text-decoration: none
       width: 220px
       border-radius: 24px
@@ -132,13 +134,14 @@ body
       display: block
       border: 2px solid #378aca
       padding-top: 10px
+      line-height: 25px !important
 
     .get-started-button
       height: 48px
       background-color: #62cf14
       color: white
       font-weight: bold
-      font-size: 20px
+      font-size: 20px !important
       text-decoration: none
       width: 220px
       border-radius: 24px
@@ -148,9 +151,10 @@ body
 
       .phrase
         margin-top: 14px
-        font-size: 18px
+        font-size: 18px !important
         float: left
         margin-left: 30px
+        line-height: 25px !important
 
       img
         float: right
@@ -163,7 +167,7 @@ body
       background-color: #62cf14
       color: white
       font-weight: bold
-      font-size: 17px
+      font-size: 17px !important
       text-decoration: none
       width: 220px
       border-radius: 24px
@@ -182,8 +186,9 @@ body
 
   .bottom-text
     margin-top: 50px
-    font-size: 12px
+    font-size: 12px !important
     color: #b2b2b2
+    line-height: 15px !important
 
     // for google
     span
